--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,23 +17,22 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: "Install dependencies"
+      - name: 'Install dependencies'
         run: npm ci
-      - name: "Lint"
+      - name: 'Lint'
         run: npm run lint --if-present
-      - name: "Build"
+      - name: 'Build'
         run: npm run build --if-present
-      - name: "Test"
+      - name: 'Test'
         run: npm run test --if-present
-      - name: "Configure for deployment"
+      - name: 'Configure for deployment'
         if: github.ref == 'refs/heads/master'
         run: |
           echo "$PROD_ENV" > lib/env.ts
         env:
           PROD_ENV: ${{ secrets.PROD_ENV }}
-      - name: "Deploy"
+      - name: 'Deploy'
         if: github.ref == 'refs/heads/master'
         run: npm run deploy
         env:
           AIRTABLE_PERSONAL_ACCESS_TOKEN: ${{ secrets.AIRTABLE_PERSONAL_ACCESS_TOKEN }}
-
