--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,34 +4,34 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     strategy:
       matrix:
-        node-version: [18]
+        node-version: [22]
 
     steps:
       - name: Checkout ${{ github.sha }}
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
-      - name: 'Install dependencies'
+      - name: "Install dependencies"
         run: npm ci
-      - name: 'Lint'
+      - name: "Lint"
         run: npm run lint --if-present
-      - name: 'Build'
+      - name: "Build"
         run: npm run build --if-present
-      - name: 'Test'
+      - name: "Test"
         run: npm run test --if-present
-      - name: 'Configure for deployment'
+      - name: "Configure for deployment"
         if: github.ref == 'refs/heads/master'
         run: |
           echo "$PROD_ENV" > lib/env.ts
         env:
           PROD_ENV: ${{ secrets.PROD_ENV }}
-      - name: 'Deploy'
+      - name: "Deploy"
         if: github.ref == 'refs/heads/master'
         run: npm run deploy
         env:
